src/css/editor.scss
html,
body {
    height: 100%;
    width: 100%;
    overflow: hidden;
    position: relative;
}

textarea {
    resize: none;
}


/*Container, container body, iframe*/

.mce-tinymce,
.mce-container-body,
#code_ifr {
    min-height: 100% !important;
}


/*Container body*/

.mce-container-body {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}


/*Editing area*/

.mce-container-body .mce-edit-area {
    position: absolute;
    top: 37px;
    /*bottom: 37px;*/
    bottom: 0;
    left: 0;
    right: 0;
}

#mce_0_ifr {
    height: 100% !important;
    min-height: 100% !important;
}


/*Footer*/

.mce-tinymce .mce-statusbar {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}

i.mce-i-fa-send:before {
    content: "\f0a9";
    font-family: FontAwesome;
    position: absolute;
    top: 5px;
    left: 10px;
}

i.mce-i-fa-sendraw:before {
    content: "\f061";
    font-family: FontAwesome;
    position: absolute;
    top: 5px;
    left: 10px;
}

i.mce-i-fa-open:before {
    content: "\f07c";
    font-family: FontAwesome;
    position: absolute;
    top: 6px;
    left: 8px;
}

.mce-tooltip {
    opacity: 1 !important;
}

.mce-tooltip-inner {
    background-color: white !important;
    color: black !important;
}

.mce-tooltip-arrow {
    position: absolute;
    width: 0;
    height: 0;
    line-height: 0;
    border: 5px dashed #fff !important;
    border-left-color: transparent !important;
    border-right-color: transparent !important;    
}

.mce-tooltip-n .mce-tooltip-arrow {
    top: 0;
    left: 50%;
    margin-left: -5px;
    border-bottom-style: solid !important;
    border-top: none !important;
    border-left-color: transparent !important;
    border-right-color: transparent !important;
}

.mce-tooltip-nw .mce-tooltip-arrow {
    border-bottom-style: solid !important;
    border-top: none !important;
    border-left-color: transparent !important;
    border-right-color: transparent !important;
}

.mce-menu-item:hover .sm-transparent:before {
    color: white;
}

.sm-transparent:before {
    content: '\00d7';
    text-align: center;
    vertical-align: middle;
    font-weight: bold;
    font-size: 20px;
    line-height: 16px;
    color: #707070;
    position: absolute;
    top: 10px;
    left: 19px;
}

.mce-i-flash {
    background-image: url(../../assets/icons/png/flash.png) !important;
    border: 1px dashed #333333 !important;
    /*
    animation-name: blinker;
	animation-iteration-count: infinite;
	animation-timing-function: cubic-bezier(1.0, 0, 0, 1.0);
	animation-duration: 1s;
	-webkit-animation-name: blinker;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-timing-function: cubic-bezier(1.0, 0, 0, 1.0);
	-webkit-animation-duration: 1s;    
    */
}

@-webkit-keyframes blinker {
    0% {
        opacity: 1.0;
    }
    50% {
        opacity: 0.0;
    }
    100% {
        opacity: 1.0;
    }
}

@keyframes blinker {
    0% {
        opacity: 1.0;
    }
    50% {
        opacity: 0.0;
    }
    100% {
        opacity: 1.0;
    }
}

.mce-custom-color-btn div {
    text-align: center;
}


/**color icon start**/

.mce-i-sm-icon {
    border: 1px solid #d6d6d6 !important;
}

.sm-BLACK {
    background-color: #000000 !important;
}

.sm-RED {
    background-color: #800000 !important;
}

.sm-GREEN {
    background-color: #008000 !important;
}

.sm-ORANGE {
    background-color: #808000 !important;
}

.sm-BLUE {
    background-color: #0000EE !important;
}

.sm-MAGENTA {
    background-color: #800080 !important;
}

.sm-CYAN {
    background-color: #008080 !important;
}

.sm-WHITE {
    background-color: #BBBBBB !important;
}

.sm-BOLD-BLACK {
    background-color: #808080 !important;
}

.sm-BOLD-RED {
    background-color: #FF0000 !important;
}

.sm-BOLD-GREEN {
    background-color: #00FF00 !important;
}

.sm-BOLD-YELLOW {
    background-color: #FFFF00 !important;
}

.sm-BOLD-BLUE {
    background-color: #9292FF !important;
}

.sm-BOLD-MAGENTA {
    background-color: #FF00FF !important;
}

.sm-BOLD-CYAN {
    background-color: #00FFFF !important;
}

.sm-BOLD-WHITE {
    background-color: #FFFFFF !important;
}

.sm-RGB000 {
    background-color: #373737 !important;
}

.sm-RGB001 {
    background-color: #37375F !important;
}

.sm-RGB002 {
    background-color: #373787 !important;
}

.sm-RGB003 {
    background-color: #3737AF !important;
}

.sm-RGB004 {
    background-color: #3737D7 !important;
}

.sm-RGB005 {
    background-color: #3737FF !important;
}

.sm-RGB010 {
    background-color: #375F37 !important;
}

.sm-RGB011 {
    background-color: #375F5F !important;
}

.sm-RGB012 {
    background-color: #375F87 !important;
}

.sm-RGB013 {
    background-color: #375FAF !important;
}

.sm-RGB014 {
    background-color: #375FD7 !important;
}

.sm-RGB015 {
    background-color: #375FFF !important;
}

.sm-RGB020 {
    background-color: #378737 !important;
}

.sm-RGB021 {
    background-color: #37875F !important;
}

.sm-RGB022 {
    background-color: #378787 !important;
}

.sm-RGB023 {
    background-color: #3787AF !important;
}

.sm-RGB024 {
    background-color: #3787D7 !important;
}

.sm-RGB025 {
    background-color: #3787FF !important;
}

.sm-RGB030 {
    background-color: #37AF37 !important;
}

.sm-RGB031 {
    background-color: #37AF5F !important;
}

.sm-RGB032 {
    background-color: #37AF87 !important;
}

.sm-RGB033 {
    background-color: #37AFAF !important;
}

.sm-RGB034 {
    background-color: #37AFD7 !important;
}

.sm-RGB035 {
    background-color: #37AFFF !important;
}

.sm-RGB040 {
    background-color: #37D737 !important;
}

.sm-RGB041 {
    background-color: #37D75F !important;
}

.sm-RGB042 {
    background-color: #37D787 !important;
}

.sm-RGB043 {
    background-color: #37D7AF !important;
}

.sm-RGB044 {
    background-color: #37D7D7 !important;
}

.sm-RGB045 {
    background-color: #37D7FF !important;
}

.sm-RGB050 {
    background-color: #37FF37 !important;
}

.sm-RGB051 {
    background-color: #37FF5F !important;
}
/* ... */

